--- a/composer.json
+++ b/composer.json
@@ -33,8 +33,9 @@
         "twig/twig": "^1.0||^2.0"
     },
     "require-dev": {
+        "dama/doctrine-test-bundle": "^5.0",
         "sensio/generator-bundle": "^3.0",
-        "symfony/phpunit-bridge": "^3.0"
+        "symfony/phpunit-bridge": "^4.0"
     },
     "scripts": {
         "symfony-scripts": [
